--- a/Stack1/CFStack1.yml
+++ b/Stack1/CFStack1.yml
@@ -1,9 +1,29 @@
 AWSTemplateFormatVersion: 2010-09-09
+Parameters:
+  KeyName:
+   Default: "MyNVAKey"
+   Type: String
+  InstanceType:
+    Description: WebServer EC2 instance type
+    Type: String
+    Default: t2.micro   
 Resources:
   CFStack1:
     Type: 'AWS::EC2::Instance'
     Properties:
+      SecurityGroups:
+        - !Ref InstanceSecurityGroup	
       ImageId: ami-1853ac65
+      KeyName: !Ref KeyName
       Tags:
         - Key: Name
           Value: CFInstanceS3-1
+  InstanceSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: Enable SSH access via port 22
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: '0.0.0.0/0'
