--- a/Stack1/CFStack1.yml
+++ b/Stack1/CFStack1.yml
@@ -35,3 +35,16 @@ Resources:
           FromPort: '22'
           ToPort: '22'
           CidrIp: '0.0.0.0/0'
+
+Outputs:
+  Instances:
+    Description: Instance
+    Value: !Ref Instance1
+  InstanceIP:
+    Description: ip of the instance
+    Value: !GetAtt 
+        - Instance1
+        - PrivateIp
+  InstanceSgs:
+    Description: Security Group ID
+    Value: !Ref InstanceSecurityGroup
